@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/10/06
+	* Updated Land Protector to block absolutely every land-based skills with
+	  the exception of Encores/Dances. [Skotlex]
 	* Disabling status abnormalities will now reset a mob's target. [Skotlex]
 	* Mob morphing also resets their target now. [Skotlex]
 	* Monk combos no longer can ignore skill delay (delay skill for all their
